tests/test_assets/semantic/invalid/casts/constant_range_and_huge_float.cog
I8_TOO_HIGH :: cast(i8, 128);
I8_TOO_LOW :: cast(i8, -129);
U8_NEGATIVE :: cast(u8, -1);
HUGE_FLOAT_TO_I64 :: cast(i64, 18446744073709551615.0);
F32_CAST_OVERFLOW :: cast(f32, 340282366920938463463374607431768211456.0);
